feat: scale sync and support EPUB-only books
